feat: publish native bundles for all platforms